--- a/resources/partials/index.html
+++ b/resources/partials/index.html
@@ -4,15 +4,15 @@
 -->
 <header class="wrap-polygons ar-intro-product">
 
-<img src="assets/img/BRR-HEADER-2017.jpg" href="https://www.facebook.com/BodminRoadRunners" width="1200" class="aligncenter" alt="Bodmin Road Runners Logo and Bodmin Background" />
+<img src="assets/img/BRR-HEADER-2017.jpg" width="1200" class="aligncenter" alt="Bodmin Road Runners Logo and Bodmin Background" />
 
         <div class="container text-center">
             <h2 class="centre-line">
-              <a href="https://www.facebook.com/BodminRoadRunners">Welcome to the Bodmin Road Runners website</a>
+              <a href="https://www.facebook.com/BodminRoadRunners" target="_blank">Welcome to the Bodmin Road Runners website</a>
             </h2>
 
             <h2 class="centre-line">
-              <a href="https://www.facebook.com/BodminRoadRunners">For the latest information please visit our Facebook page</a>
+              <a href="https://www.facebook.com/BodminRoadRunners" target="_blank">For the latest information please visit our Facebook page</a>
             </h2>
         </div>
 </header>
